welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:2: error: ';' expected but ',' found.
  var a=0,b=0
         ^