welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var a=0,b=0
  for (cpt1<-0 to nums.length -1) {
    a+=nums(cpt1)
  }
  b=a/nums.length
  return b
}